samples/_failures_safe/1761713625_d8ca81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d432d81.c: In function ‘main’:
./samples/SAFE/__tmp_5d432d81.c:139:91: error: expected ‘)’ at end of input
  139 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer
      |                                           ~                                               ^
      |                                                                                           )
./samples/SAFE/__tmp_5d432d81.c:139:30: error: too few arguments to function ‘compress_data’
  139 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer
      |                              ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5d432d81.c:74:8: note: declared here
   74 | size_t compress_data(const struct compression_params *params, const uint8_t *input, size_t input_len, uint8_t *output, size_t output_len) {
      |        ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5d432d81.c:139:5: error: expected declaration or statement at end of input
  139 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer
      |     ^~~~~~
